# faster-rcnn-lin-2.0

./: .gitignore  pyproject.toml  test.ipynb  test.py
pro/data/: dataset  vocdata.py
pro/model/: model.py
pro/util/: utils.py
